--- a/scss/main.scss
+++ b/scss/main.scss
@@ -93,7 +93,7 @@ main {
 
     .bio {
         grid-area: bio;
-        font-size: 1.5rem;
+        font-size: 3rem;
     }
 
     .job-1 {
@@ -112,6 +112,7 @@ main {
         background: lighten($primary-color, 5);
         padding: 0.5rem;
         border-bottom: $secondary-color 5px solid;
+        font-size: 2rem;
     }
 }
 
@@ -142,7 +143,7 @@ main {
     margin-top: 1rem;
 
     div {
-        font-size: 2rem;
+        font-size: 1.5rem;
         border: 3px #fff solid;
         padding: 1.5rem 2.5rem;
         margin-bottom: 3rem;
@@ -192,5 +193,25 @@ main {
     color: set-text-color($primary-color);
     height: 60px;
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 0px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 @import 'mobile';
