--- a/scss/main.scss
+++ b/scss/main.scss
@@ -212,6 +212,42 @@ main {
     height: 100%;
 }
 
+.tooltip {
+    position: relative;
+    // background: rgba(0, 0, 0, 0.3);
+    // padding: 5px 12px;
+    // border-radius: 100%;
+    // font-size: 20px;
+    cursor: help;
+}
 
+.tooltip::before,
+.tooltip::after {
+    position: absolute;
+    left: 50%;
+    opacity: 0;
+    transition: all ease 0.3s;
+}
+
+
+
+.tooltip::after {
+    content: attr(data-tooltip);
+    background: rgba(0, 0, 0, 0.3);
+    top: -20px;
+    transform: translateY(100%);
+    font-size: 14px;
+    margin-left: -100px;
+    width: 200px;
+    border-radius: 10px;
+    color: #eee;
+    padding: 14px;
+    text-align: center;
+}
+
+.tooltip:hover::before,
+.tooltip:hover::after {
+    opacity: 1;
+}
 
 @import 'mobile';
